# libSI

./: CMakeLists.txt  README.md  examples.cpp  main.cpp
SI/: Earth.hpp  IO.h  ISO.h  Mars.hpp  Mercury.hpp  Moon.hpp  Sun.hpp  all.h  base.hpp  building_heights.hpp  city_distances.hpp  constants.h  constants.hpp  conversion.h  datatypes.h  distances.hpp  everything.hpp  formulas.h  formulas.hpp  from_string.h  heights.hpp  internal.h  literals.h  literals.hpp  mountain_heights.hpp  music.hpp  prefixes.h  prefixes.hpp  print.h  print.hpp  print_helper.hpp  printer.hpp  test_literals.cpp  tests.h  tests.hpp  to_string.h  types.hpp  unit_tests.cpp  unit_tests.h  units.h  (+2 more)
SI/core/: boost_qt_connect.hpp  color.hpp  configuration.hpp  configuration.ipp  container.hpp  cutility.h  debug_logger.hpp  eventdispatcher.hpp  fwd.hpp  glmx.h  http_client.hpp  legacy_object_range.hpp  lib_name.h  map_inverse.h  pimpl.hpp  prevent_mem_functions.h  range.hpp  resources.hpp  serialization.hpp  si.hpp  signal.hpp  socket_pipe.hpp  sound.hpp  status_bits.hpp  status_bits.ipp  string.hpp  tagged_tuple.hpp  thread_queue.hpp  utility.hpp  utility.ipp  value_tree.hpp  value_tree.ipp  value_tree_visitor.hpp  vec.hpp  (+1 more)
datasets/: ISO_standards.h  Moon.h  README.md  all.h  chemical_elements.csv  chemical_elements.h  exoplanets.csv  exoplanets.h  monthly_sunspots.csv  monthly_sunspots.h  moon.h  moons.h  musical_notes.csv  musical_notes.h  natural_satellites.csv  natural_satellites.h  physics_particles.csv  physics_particles.h  planets.csv  planets.h  satellites.h  sunspots.csv  sunspots.h
(+39 files in other folders)
